# Social-Gaming

./: CMakeLists.txt
lib/web-socket-networking/: CMakeLists.txt
lib/web-socket-networking/lib/: CMakeLists.txt
lib/web-socket-networking/lib/Game/: CMakeLists.txt  Game.cpp
lib/web-socket-networking/lib/Game/include/: Game.h
lib/web-socket-networking/lib/GameConfig/: CMakeLists.txt  GameConfig.cpp
lib/web-socket-networking/lib/GameConfig/include/: GameConfig.h  Setup.h
lib/web-socket-networking/lib/GameParser/: CMakeLists.txt  GameParser.cpp  RockPaperScissors.json
lib/web-socket-networking/lib/GameParser/include/: GameParser.h
lib/web-socket-networking/lib/GameSession/: CMakeLists.txt  GameSession.cpp
lib/web-socket-networking/lib/GameState/: CMakeLists.txt
lib/web-socket-networking/lib/GameState/include/: GameState.h
lib/web-socket-networking/lib/Rule/: CMakeLists.txt  Rule.cpp
lib/web-socket-networking/lib/Rule/include/: Rule.h
lib/web-socket-networking/lib/Rules/: CMakeLists.txt  Rules.cpp
lib/web-socket-networking/lib/Rules/ArithmeticOperations/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/ArithmeticOperations/Add/: Add.cpp  CMakeLists.txt
lib/web-socket-networking/lib/Rules/ArithmeticOperations/Add/include/: Add.h
lib/web-socket-networking/lib/Rules/ControlStructures/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/ControlStructures/Condition/: CMakeLists.txt  Condition.cpp
lib/web-socket-networking/lib/Rules/ControlStructures/Condition/include/: Condition.h
lib/web-socket-networking/lib/Rules/ControlStructures/Foreach/: CMakeLists.txt  Foreach.cpp
lib/web-socket-networking/lib/Rules/ControlStructures/Foreach/include/: Foreach.h
lib/web-socket-networking/lib/Rules/ControlStructures/InParallel/: CMakeLists.txt  InParallel.cpp
lib/web-socket-networking/lib/Rules/ControlStructures/InParallel/include/: InParallel.h
lib/web-socket-networking/lib/Rules/ControlStructures/Loop/: CMakeLists.txt  Loop.cpp
lib/web-socket-networking/lib/Rules/ControlStructures/Loop/include/: Loop.h
lib/web-socket-networking/lib/Rules/ControlStructures/ParallelFor/: CMakeLists.txt  ParallelFor.cpp
lib/web-socket-networking/lib/Rules/ControlStructures/ParallelFor/include/: ParallelFor.h
lib/web-socket-networking/lib/Rules/ControlStructures/Switch/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/ControlStructures/Switch/include/: Switch.h
lib/web-socket-networking/lib/Rules/ControlStructures/When/: CMakeLists.txt  When.cpp
lib/web-socket-networking/lib/Rules/ControlStructures/When/include/: When.h
lib/web-socket-networking/lib/Rules/HumanInput/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/HumanInput/BasicInput/: BasicInput.cpp  CMakeLists.txt
lib/web-socket-networking/lib/Rules/HumanInput/BasicInput/include/: BasicInput.h
lib/web-socket-networking/lib/Rules/HumanInput/InputChoice/: CMakeLists.txt  InputChoice.cpp
lib/web-socket-networking/lib/Rules/HumanInput/InputChoice/include/: InputChoice.h
lib/web-socket-networking/lib/Rules/HumanInput/InputText/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/HumanInput/InputText/include/: InputText.h
lib/web-socket-networking/lib/Rules/HumanInput/InputVote/: CMakeLists.txt  InputVote.cpp
lib/web-socket-networking/lib/Rules/HumanInput/InputVote/include/: InputVote.h
lib/web-socket-networking/lib/Rules/ListOperations/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/ListOperations/Deal/: CMakeLists.txt  Deal.cpp
lib/web-socket-networking/lib/Rules/ListOperations/Deal/include/: Deal.h
lib/web-socket-networking/lib/Rules/ListOperations/Discard/: CMakeLists.txt  Discard.cpp
lib/web-socket-networking/lib/Rules/ListOperations/Discard/include/: Discard.h
lib/web-socket-networking/lib/Rules/ListOperations/Extend/: CMakeLists.txt  Extend.cpp
lib/web-socket-networking/lib/Rules/ListOperations/Extend/include/: Extend.h
lib/web-socket-networking/lib/Rules/ListOperations/Reverse/: CMakeLists.txt  Reverse.cpp
lib/web-socket-networking/lib/Rules/ListOperations/Reverse/include/: Reverse.h
lib/web-socket-networking/lib/Rules/ListOperations/Shuffle/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/ListOperations/Shuffle/include/: Shuffle.h
lib/web-socket-networking/lib/Rules/ListOperations/Sort/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/ListOperations/Sort/include/: Sort.h
lib/web-socket-networking/lib/Rules/Output/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/Output/GlobalMessage/: CMakeLists.txt  GlobalMessage.cpp
lib/web-socket-networking/lib/Rules/Output/GlobalMessage/include/: GlobalMessage.h
lib/web-socket-networking/lib/Rules/Output/Message/: CMakeLists.txt  Message.cpp
lib/web-socket-networking/lib/Rules/Output/Message/include/: Message.h
lib/web-socket-networking/lib/Rules/Output/Scores/: CMakeLists.txt  Scores.cpp
lib/web-socket-networking/lib/Rules/Output/Scores/include/: Scores.h
lib/web-socket-networking/lib/Rules/Timing/: CMakeLists.txt
lib/web-socket-networking/lib/Rules/Timing/Timer/: CMakeLists.txt  Timer.cpp
lib/web-socket-networking/lib/Rules/Timing/Timer/include/: Timer.h
lib/web-socket-networking/lib/Rules/include/: Rules.h
lib/web-socket-networking/lib/VarPool/: CMakeLists.txt  VarPool.cpp
lib/web-socket-networking/lib/VarPool/include/: VarPool.h
lib/web-socket-networking/lib/users/: CMakeLists.txt  users.cpp
lib/web-socket-networking/lib/users/include/: users.h
lib/web-socket-networking/tools/chatserver/: CMakeLists.txt  chatserver.cpp  testGame.json
test/: CMakeLists.txt  Dummy.cpp  GameConfigTest.cpp  GameParserTest.cpp  GameSessionTest.cpp  GameTest.cpp  RockPaperScissors.json  RuleParserTest.cpp  SetupTest.cpp  VarPoolTest.cpp  commandHandlerTests.cpp  gamefile.json  jsonToGame.cpp  parserTests.cpp  testGame.json  testGameWithRule.json  user_test.cpp
test/rule-tests/ListOperations/: DealTests.cpp  DiscardTests.cpp  ExtendTests.cpp  ReverseTests.cpp  ShuffleTests.cpp  SortTests.cpp
test/testGameFiles/: gamefile.json  invalidGameFile.json
(+14 files in other folders)
